# rnes

./: .gitignore  Cargo.toml  README.md
crates/apu/: Cargo.toml
crates/apu/src/: lib.rs
crates/cartridge/: Cargo.toml
crates/cartridge/src/: cartridge.rs  header.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  constants.rs  debugger.rs  error.rs  lib.rs  memory.rs  save_system.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: bus.rs  emulator.rs  lib.rs  tests.rs
crates/cpu6502/: Cargo.toml
crates/cpu6502/src/: addressing.rs  cpu.rs  flags.rs  instructions.rs  lib.rs  tests.rs
crates/mappers/: Cargo.toml
crates/mappers/src/: lib.rs
crates/ppu/: Cargo.toml
crates/ppu/src/: lib.rs
crates/test-suite/: Cargo.toml
crates/test-suite/saves/: NES.state1  test_m4_runner.sav  test_m4_runner.state1  test_m4_runner.state2  test_m4_runner_internal.state2  test_m4_runner_internal.state3
crates/test-suite/src/: apu_integration_tests.rs  apu_test_runner.rs  cpu_integration_tests.rs  cpu_test_runner.rs  lib.rs  m2_integration_tests.rs  m4_integration_tests.rs  m4_test_runner.rs  m5_integration_tests.rs  m5_test_runner.rs  m6_integration_tests.rs  ppu_integration_tests.rs  ppu_test_runner.rs
crates/test-suite/tests/: m6_integration_tests.rs
docs/: CPU_IMPLEMENTATION.md  M1_IMPLEMENTATION.md  M1_TESTING_PROCESS.md  M2_IMPLEMENTATION.md  M3_IMPLEMENTATION.md  M4_COMPLETION_SUMMARY.md  M4_IMPLEMENTATION.md  M4_TESTING.md  M5_IMPLEMENTATION.md  M5_TESTING_SUMMARY.md  M6_IMPLEMENTATION.md  M6_TESTING.md  PPU_TESTING.md  PPU_TIMING_OPTIMIZATION.md  PROGRESS.md  README.md  SAVE_SYSTEM.md  TESTING_GUIDE.md  TEST_ROMS.md  WEB_FRONTEND.md
examples/: Cargo.toml  advanced_rom_test.rs  apu_demo.rs  apu_integration_test.rs  apu_register_test.rs  cpu_execution_test.rs  cpu_step_debug.rs  debug_memory_access.rs  m1_demo.rs  m2_demo.rs  m4_demo.rs  m5_demo.rs  m5_rom_test.rs  m6_demo.rs  ppu_test_framework_demo.rs  ppu_timing_optimization_demo.rs  reset_vector_test.rs  rom_analyzer.rs  rom_debug.rs  save_system_demo.rs  simple_apu_test.rs  simple_background_test.rs  simple_test.rs
frontend/native/: Cargo.toml
frontend/native/src/: main.rs
frontend/web/: Cargo.toml  MIGRATION_SUMMARY.md  README.md  index.html  package-lock.json  package.json  test.html  vite.config.js
frontend/web/src/: App.css  App.jsx  lib.rs  main.js  style.css
frontend/web/src/components/: PixelDemo.jsx
saves/: NES.sav  NES.state1  NES.state2  NES.state9
scripts/: download_all_test_roms.sh  download_apu_test_roms.sh  download_cpu_test_roms.sh  download_m2_test_roms.sh  download_m4_test_roms.sh  download_m5_test_roms.sh  download_m6_test_roms.sh  download_ppu_test_roms.sh  download_test_roms.sh
tests/roms/: test.nes
