[workspace]
members = [
    "crates/cpu6502",
    "crates/ppu", 
    "crates/apu",
    "crates/mappers",
    "crates/cartridge",
    "crates/core",
    "crates/common",
    "crates/test-suite",
    "frontend/native",
]

resolver = "2"

[workspace.dependencies]
# Core libraries
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bitflags = "2.4"
arrayvec = "0.7"
smallvec = "1.11"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing and development tools
criterion = "0.5"
proptest = "1.3"

# Graphics and audio
wgpu = "0.19"
winit = "0.29"
gilrs = "0.10"
cpal = "0.15"

# Configuration
config = "0.13"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "NES emulator written in Rust"
license = "MIT"
repository = "https://github.com/yourusername/rnes"

# Rust version requirement
[workspace.metadata]
rust-version = "1.89"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
