[package]
name = "rnes-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Example programs for RNES"
license.workspace = true
repository.workspace = true

[[bin]]
name = "m1_demo"
path = "m1_demo.rs"

[[bin]]
name = "m2_demo"
path = "m2_demo.rs"

[[bin]]
name = "simple_test"
path = "simple_test.rs"

[[bin]]
name = "debug_memory_access"
path = "debug_memory_access.rs"

[[bin]]
name = "cpu_execution_test"
path = "cpu_execution_test.rs"

[[bin]]
name = "simple_background_test"
path = "simple_background_test.rs"

[[bin]]
name = "advanced_rom_test"
path = "advanced_rom_test.rs"

[[bin]]
name = "rom_analyzer"
path = "rom_analyzer.rs"

[[bin]]
name = "reset_vector_test"
path = "reset_vector_test.rs"

[[bin]]
name = "ppu_test_framework_demo"
path = "ppu_test_framework_demo.rs"

[dependencies]
rnes-core = { path = "../crates/core" }
rnes-cartridge = { path = "../crates/cartridge" }
rnes-common = { path = "../crates/common" }
rnes-test-suite = { path = "../crates/test-suite" }
