[package]
name = "rnes-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Example programs for RNES"
license.workspace = true
repository.workspace = true

[[bin]]
name = "m1_demo"
path = "m1_demo.rs"

[[bin]]
name = "m2_demo"
path = "m2_demo.rs"

[[bin]]
name = "simple_test"
path = "simple_test.rs"

[[bin]]
name = "debug_memory_access"
path = "debug_memory_access.rs"

[[bin]]
name = "cpu_execution_test"
path = "cpu_execution_test.rs"

[[bin]]
name = "simple_background_test"
path = "simple_background_test.rs"

[[bin]]
name = "advanced_rom_test"
path = "advanced_rom_test.rs"

[[bin]]
name = "rom_analyzer"
path = "rom_analyzer.rs"

[[bin]]
name = "reset_vector_test"
path = "reset_vector_test.rs"

[[bin]]
name = "ppu_test_framework_demo"
path = "ppu_test_framework_demo.rs"

[[bin]]
name = "apu_demo"
path = "apu_demo.rs"

[[bin]]
name = "simple_apu_test"
path = "simple_apu_test.rs"

[[bin]]
name = "apu_register_test"
path = "apu_register_test.rs"

[[bin]]
name = "apu_integration_test"
path = "apu_integration_test.rs"

[[bin]]
name = "m4_demo"
path = "m4_demo.rs"

[[bin]]
name = "m5_demo"
path = "m5_demo.rs"

[[bin]]
name = "m5_rom_test"
path = "m5_rom_test.rs"

[[bin]]
name = "save_system_demo"
path = "save_system_demo.rs"

[[bin]]
name = "m6_demo"
path = "m6_demo.rs"

[[bin]]
name = "rom_debug"
path = "rom_debug.rs"

[[bin]]
name = "cpu_step_debug"
path = "cpu_step_debug.rs"

[[bin]]
name = "ppu_timing_optimization_demo"
path = "ppu_timing_optimization_demo.rs"

[dependencies]
rnes-core = { path = "../crates/core" }
rnes-cartridge = { path = "../crates/cartridge" }
rnes-common = { path = "../crates/common" }
rnes-test-suite = { path = "../crates/test-suite" }
rnes-ppu = { path = "../crates/ppu" }
rnes-mappers = { path = "../crates/mappers" }
tracing-subscriber = "0.3"
