[package]
name = "rnes-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared types and utilities for RNES"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
