[package]
name = "rnes-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared types and utilities for RNES"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
proptest = { workspace = true }
