[package]
name = "rnes-mappers"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Mapper implementations for RNES"
license.workspace = true
repository.workspace = true

[dependencies]
rnes-common = { path = "../common" }
rnes-cartridge = { path = "../cartridge" }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
